commiting changes